--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,86 +1,91 @@
+catalogMode: prefer
+cleanupUnusedCatalogs: true
+strictPeerDependencies: false
+ignoreWorkspaceRootCheck: true
+shamefullyHoist: true
+shellEmulator: true
+
 packages:
   - fixtures/*
 
 overrides:
   '@eslint-community/eslint-utils': ^4.9.0
-  '@typescript-eslint/utils': ^8.47.0
+  '@typescript-eslint/utils': ^8.48.1
   eslint: ^9.39.1
-  tsx: ^4.20.6
+  tsx: ^4.21.0
 
 catalogs:
   dev:
-    '@antfu/ni': ^27.0.1
-    '@eslint-types/typescript-eslint': ^7.5.0
-    '@eslint-types/unicorn': ^52.0.0
-    '@eslint/config-inspector': ^1.4.1
+    '@antfu/ni': ^28.0.0
+    '@eslint/config-inspector': ^1.4.2
     '@stylistic/eslint-plugin-migrate': ^4.4.1
     '@types/node': ^24.10.1
-    '@types/react': ^19.2.6
-    bumpp: ^10.3.1
+    '@types/react': ^19.2.7
+    bumpp: ^10.3.2
     eslint-typegen: ^2.3.0
     esno: ^4.8.0
-    execa: ^9.6.0
-    lint-staged: ^16.2.6
-    prettier: ^3.6.2
-    react: ^19.2.0
-    simple-git-hooks: ^2.13.1
+
+    lint-staged: ^16.2.7
+    prettier: ^3.7.4
+    react: ^19.2.1
     simple-open-url: ^3.0.1
-    sucrase: ^3.35.0
-    tinyglobby: ^0.2.15
-    tsdown: ^0.16.5
+
+    tsdown: ^0.15.12
     typescript: ^5.9.3
+  inline:
+    find-up-simple: ^1.0.1
   peer:
-    '@eslint-react/eslint-plugin': ^2.3.5
-    '@next/eslint-plugin-next': ^16.0.3
+    '@eslint-react/eslint-plugin': ^2.3.12
+    '@next/eslint-plugin-next': ^16.0.7
     '@prettier/plugin-xml': ^3.4.2
-    '@unocss/eslint-plugin': ^66.5.7
+    '@unocss/eslint-plugin': ^66.5.10
     eslint: ^9.39.1
     eslint-plugin-erasable-syntax-only: ^0.4.0
-    eslint-plugin-format: ^1.0.2
+    eslint-plugin-format: ^1.1.0
     eslint-plugin-react-hooks: ^7.0.1
     eslint-plugin-react-refresh: ^0.4.24
-    vue: ^3.5.24
+    vue: ^3.5.25
   prod:
     '@antfu/install-pkg': ^1.1.0
     '@clack/prompts': ^0.11.0
     '@eslint-community/eslint-plugin-eslint-comments': ^4.5.0
     '@eslint/markdown': ^7.5.1
     '@stylistic/eslint-plugin': ^5.6.1
-    '@typescript-eslint/eslint-plugin': ^8.47.0
-    '@typescript-eslint/parser': ^8.47.0
-    '@vitest/eslint-plugin': ^1.4.3
+    '@typescript-eslint/eslint-plugin': ^8.48.1
+    '@typescript-eslint/parser': ^8.48.1
     eslint-config-flat-gitignore: ^2.1.0
     eslint-flat-config-utils: ^2.1.4
     eslint-merge-processors: ^2.0.0
     eslint-parser-plain: ^0.1.1
     eslint-plugin-antfu: ^3.1.1
     eslint-plugin-import-lite: ^0.3.0
-    eslint-plugin-jsdoc: ^61.2.1
+    eslint-plugin-jsdoc: ^61.4.1
     eslint-plugin-jsonc: ^2.21.0
     eslint-plugin-n: ^17.23.1
     eslint-plugin-no-only-tests: ^3.3.0
     eslint-plugin-perfectionist: ^4.15.1
-    eslint-plugin-pnpm: ^1.3.0
+    eslint-plugin-pnpm: ^1.4.0
     eslint-plugin-regexp: ^2.10.0
     eslint-plugin-toml: ^0.12.0
     eslint-plugin-unicorn: ^62.0.0
     eslint-plugin-unused-imports: ^4.3.0
-    eslint-plugin-vue: ^10.5.1
+    eslint-plugin-vue: ^10.6.2
     eslint-plugin-yml: ^1.19.0
     eslint-processor-vue-blocks: ^2.0.0
     globals: ^16.5.0
     jsonc-eslint-parser: ^2.4.1
     local-pkg: ^1.1.2
-    prompts: ^2.4.2
     toml-eslint-parser: ^0.10.0
     vue-eslint-parser: ^10.2.0
-    yaml-eslint-parser: ^1.3.0
+    yaml-eslint-parser: ^1.3.2
   test:
-    vitest: ^4.0.10
+    '@vitest/eslint-plugin': ^1.5.1
+    execa: ^9.6.1
+    tinyglobby: ^0.2.15
+    vitest: ^4.0.15
 
 onlyBuiltDependencies:
   - esbuild
-  - simple-git-hooks
 
 peerDependencyRules:
   ignoreMissing:
